- Added nuyen and essence filters in the equipment selection screen to allow filtering by maximum essence cost and by maximum nuyen cost.
- Refactored life modules that grant SINs to use the new qualitylevel improvement type. Existing characters with life modules that grant SINs will need to reapply their improvements to see any changes and may find it preferable to remove and re-add the modules.

Fixes implemented by BM123499

Armor.xml

    Added missing <armor> entry for Parachute.
    Added missing armor_capacity attribute for Pantheon Quick-Charge Battery Pack.

Critterpowers.xml

    Removed legacy SR4‑only power.
    Standardized hyphenation: Low-Light, Wire-band using minus signs.
    Added automotive powers.
    Added “Fold Perception” and “Agonizing Pain” from Howling Shadows (HS).

Critters.xml

    Renamed Baboon → Ozian Baboon (per source text).
    Removed “Wyrd Mantis” (SR4‑only).
    Populated missing <initiative>, <magic>, <resonance>, and <depth> fields for several critters.
    Remove unintended character across the file.
    Applied <rating> to skill and automotive powers; replaced stray <select>.
    Corrected power and quality names:
        Sillence → Silence
        Devour → Devouring
        Substance Extrusion → Secretion/Substance Extrusion
        Shadowing → Sneaking
        Improved Senses → Enhanced Senses
        Spell Resistance → Magic Resistance
        Banishing → Banishing Resistance
        Fae Glamour → Fey Glamour
        Regenerate → Regeneration
        Throw Weapon → Throwing Weapon
        Deezz → Derezz
        Real World Naivete → Real World Naiveté
    Re-classified:
        Moved Astral Perception into AdeptPower or Quality (chose Quality).
        Fixed <power> nesting under <optionalpowers>.
        Changed Munge to a Quality, Resonance Hosting to a Power, Agony to a Spell.

cyberware.xml

    Added missing <capacity> and <cost> attributes to several implants.
    Removed duplicated <inheritattributes> tag.
